prompt-tracker/chart/templates/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prompt-tracker
spec:
  path: /
  to:
    kind: Service
    name: prompt-tracker
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
